apply plugin: "io.freefair.maven-publish-java"
apply plugin: "java-library"

description = "OkHttp 5 Spring Boot Starter"

dependencies {
    api platform(project(":okhttp-spring-boot-dependencies"))
    api platform('com.squareup.okhttp3:okhttp-bom:5.+')

    api 'org.springframework.boot:spring-boot-starter'
    api project(':okhttp-spring-boot-autoconfigure')
    api project(':okhttp-spring-client')
    api 'com.squareup.okhttp3:okhttp'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation("org.mockito:mockito-junit-jupiter:latest.release")
    testImplementation("net.bytebuddy:byte-buddy-agent:latest.release")
}

compileJava { // tasks.named('compileJava')
    inputs.files(processResources)
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['-Xlint:all,-serial', '-parameters', '-g'])
    options.release.set(25) // javac --release 7..21 ~ libs.versions.jdk.get().toInteger()
}

tasks.named('test', Test) {
    useJUnitPlatform()
    jvmArgs = [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "-Djdk.attach.allowAttachSelf=true",
            "-XX:+EnableDynamicAgentLoading"
    ]
}
